# Waiter-Bot

./: README.md
ros_ws/src/waiter_bot_description/: CMakeLists.txt  package.xml
ros_ws/src/waiter_bot_description/UI/: control_panel.py  control_panel_1.py  map1.yaml
ros_ws/src/waiter_bot_description/launch/: controller_launch.py  display_launch.py  gazebo_launch.py
ros_ws/src/waiter_bot_description/map/: map1.yaml
ros_ws/src/waiter_bot_description/navigation/: auto_navigation.launch.py  bot_amcl.launch.py  gmapping.launch.py  gmapping_auto.launch.py  move_base_mapless.launch.py  movebase.launch.py  navigation.launch.py
ros_ws/src/waiter_bot_description/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
ros_ws/src/waiter_bot_description/rviz_config/: explore.rviz  gmapping.rviz  navigation.rviz
ros_ws/src/waiter_bot_description/src/: control_panel.py
ros_ws/src/waiter_bot_description/urdf/: waiter_bot.gazebo  waiter_bot.trans  waiter_bot.xacro
ros_ws/src/waiter_bot_description/world/: cafe.world  cafe3.world
