<?xml version="1.0"?>
<package format="2">
  <name>waiter_bot_description</name>
  <version>0.0.0</version>
  <description>The waiter_bot_description package</description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- License information -->
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Optional dependencies -->
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>

  <!-- Export -->
  <export></export>
</package>

